# fortran_sandpit

./: .gitmodules  CMakeLists.txt  README.md
cmake/: HarperStd.cmake  JsonFortran.cmake
tests/: CMakeLists.txt
tests/accuracy/: test_pearsons.f90
tests/cufft/: cufft_test1.f90  cufft_test2.f90  test_cufft.f90
tests/intel/: test_intel.f90
tests/memleaks/: test_memleaks.f90
tests/mpi_cuda_omp/openmp/: Makefile  add  add.cu  mul  mul.cu
tests/mpimp/: parallelEnvironment.f90  simple_test_mpimp_benchmark.f90
tests/openacc/: oacc_omp_test.f90  oacc_vecadd.f90  parallel_bsearch.f90  rbc.f90  simple_test_openacc.f90.orig  test_openacc.f90
tests/sorting/: MTsort.f90  bitonicsort.f90  bitonicsort2.f90  heapsort.f90  intel_qsort.f90  mergesort.f90  qsort_basic.f90  qsort_c.f90  quicksort_m.f90  radixsort.f90  test_sorting.f90
tests/stats/: test_stats.f90
tests/std08_harper/: testbigf0.f90  testkinds.f90  testkinds03.f90  testnaninf.f90  testpure.f90  testquaternions.f90
tests/test_gnufor2/: simple_test_gnufor2.f90  test_gnufor2.f90
tests/varying_strings/: LICENCE  elemental_subroutine.f90  iso_varing_strings.f90  test_iso_varying_strings.f90
